[package]
name = "steer"
version.workspace = true
edition.workspace = true
description = "Command-line interface for Steer coding agent."
readme = "../../README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "steer"
path = "src/main.rs"

[[bin]]
name = "schema-generator"
path = "src/bin/schema_generator.rs"


[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# API client
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.88"
tracing = "0.1.41"
schemars = { version = "1.0", features = ["derive"] }
steer-tools.workspace = true
steer-core.workspace = true
steer-grpc.workspace = true
steer-tui = { workspace = true, optional = true }
tempfile = "3.19.1"
shell-words = "1.1.0"

prost-types = "0.13.5"
toml = "0.8.23"
which = "8.0.0"
eyre = "0.6.12"
color-eyre = "0.6.5"

[dev-dependencies]
tempfile = "3.19.1"

[features]
default = ["ui"]
ui = ["steer-tui"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/steer-v{ version }/steer-{ target }.tar.xz"
pkg-fmt = "txz"
